Master checker now just uses a parameter client
Master URI is now typed as URI instead of String